[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = [
  "init-if-needed",
  "interface-instructions",
  "allow-missing-optionals",
] }
anchor-spl = { version = "0.30.1", features = ["token_2022_extensions", "token_2022"] }
wen_new_standard =  { git = "https://github.com/wen-community/wen-new-standard", features = ["cpi"] }
wen_royalty_distribution =  { git = "https://github.com/wen-community/wen-new-standard", features = ["cpi"] }
spl-transfer-hook-interface = "0.5.1"
spl-tlv-account-resolution = "0.4.0"
spl-pod = "0.2.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
