[workspace]
members = ["merkle-tree", "merkle-tree-cli", "merkle-tree-verify"]

[workspace.dependencies]
csv = "1.3.0"
fast-math = "0.1"
indexmap = "2.1.0"
serde = "1.0.137"
serde_json = "1.0.102"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.50"

clap = { version = "3.2.25", features = ["derive", "env"] }

solana-sdk = { version = "=1.16.16" }
solana-program = { version = "=1.16.16" }

merkle-tree = { path = "merkle-tree" }
merkle-tree-cli = { path = "merkle-tree-cli" }
merkle-tree-verify = { path = "merkle-tree-verify" }