[package]
name = "rarible_editions"
version = "0.2.1"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/rarible/eclipse-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "rarible_editions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-transfer-hook-interface.workspace = true
mpl-token-metadata = { workspace = true }
mpl-bubblegum = { workspace = true }
num_enum = { workspace = true }
libreplex_shared.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true
spl-token-group-interface.workspace = true
spl-type-length-value.workspace = true
dyn-fmt.workspace = true


[dev-dependencies]
solana-program-test = "1.18.17"
solana-sdk = "1.18.17"