[package]
name = "rarible_marketplace"
version = "0.1.0"
description = "Base marketplace contracts on SVM for rarible"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rarible_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build", 
  "anchor-spl/idl-build",
]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-transfer-hook-interface.workspace = true
mpl-token-metadata = { workspace = true }
mpl-bubblegum = { workspace = true }
num_enum = { workspace = true }
wen_new_standard = { workspace = true }
